[gd_scene load_steps=4 format=3 uid="uid://dmnyqot066dwk"]

[ext_resource type="Texture2D" uid="uid://difgnxykkgvpo" path="res://Backgrounds/Blue.png" id="1_5gir4"]
[ext_resource type="Script" path="res://scenes/mainmenue.gd" id="1_kel0m"]
[ext_resource type="Texture2D" uid="uid://cdhtk76ajjglr" path="res://cooltext452536816746677.png" id="2_8bmgk"]

[node name="Mainmenue" type="Node"]
script = ExtResource("1_kel0m")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5gir4")
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -68.0
offset_right = 194.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8bmgk")

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = 73.0
offset_right = -100.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Level 1"

[node name="Button2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = 74.0
offset_right = 85.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Level 2"

[node name="Button3" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = 74.0
offset_right = 268.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Level 3"

[node name="Button4" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 133.0
offset_right = 87.0
offset_bottom = 183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Level 4"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
